[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/GameOverUI.gd" type="Script" id=1]
[ext_resource path="res://Assets/DynamicFonts/MinecraftTF_MM_Buttons.tres" type="DynamicFont" id=2]
[ext_resource path="res://Assets/DynamicFonts/MineTTF_8_whtie_FixedToCenter.tres" type="DynamicFont" id=3]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "appear"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="GameOverUI" type="Control"]
margin_left = 40.0
margin_top = 16.0
margin_right = 200.0
margin_bottom = 120.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_left = -0.25
anchor_top = -0.154
anchor_right = 1.25
anchor_bottom = 1.154
margin_left = 40.0
margin_top = 16.016
margin_right = -40.0
margin_bottom = -16.016
color = Color( 0, 0, 0, 0.392157 )

[node name="GameOverLabel" type="Label" parent="."]
anchor_left = -0.25
anchor_top = -0.154
anchor_right = 1.25
anchor_bottom = 1.154
margin_left = 56.0
margin_top = 24.016
margin_right = -56.0
margin_bottom = -88.016
custom_fonts/font = ExtResource( 2 )
text = "GAME OVER"
align = 1
valign = 1

[node name="VBoxContainer3" type="VBoxContainer" parent="."]
anchor_left = -0.25
anchor_top = -0.154
anchor_right = 1.25
anchor_bottom = 1.154
margin_left = 64.0
margin_top = 52.016
margin_right = -64.0
margin_bottom = -28.016

[node name="ShopButton" type="Button" parent="VBoxContainer3"]
margin_right = 112.0
margin_bottom = 16.0
size_flags_horizontal = 5
size_flags_vertical = 2
custom_fonts/font = ExtResource( 3 )
text = "OPEN SHOP"

[node name="RetryButton" type="Button" parent="VBoxContainer3"]
margin_top = 20.0
margin_right = 112.0
margin_bottom = 36.0
size_flags_horizontal = 5
size_flags_vertical = 2
custom_fonts/font = ExtResource( 3 )
text = "RE-TRY"

[node name="ReturnButton" type="Button" parent="VBoxContainer3"]
margin_top = 40.0
margin_right = 112.0
margin_bottom = 56.0
size_flags_horizontal = 5
size_flags_vertical = 2
custom_fonts/font = ExtResource( 3 )
text = "RETURN"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 1 )
anims/appear = SubResource( 2 )

[connection signal="visibility_changed" from="." to="." method="_on_GameOverUI_visibility_changed"]
[connection signal="pressed" from="VBoxContainer3/ShopButton" to="." method="_on_ShopButton_pressed"]
[connection signal="pressed" from="VBoxContainer3/RetryButton" to="." method="_on_RetryButton_pressed"]
[connection signal="pressed" from="VBoxContainer3/ReturnButton" to="." method="_on_ReturnButton_pressed"]
